--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "false": "^0.0.4",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.13.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
